# doty

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIO_PLAYBACK_FIX.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PORTUGUESE_SUPPORT.md  QUICKSTART.md  README.md  STT_SETUP.md  TODO.md  audio_capture.py  biome.json  config.example.yaml  demo.py  electron.vite.config.ts  index.html  llm_client.py  main.py  music_manager.py  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  portuguese_transcription.txt  pyproject.toml  requirements.txt  run_stt.sh  setup_conda.sh  stt_parakeet.py  stt_parakeet_simple.py  tailwind.config.js  test_integration.py  test_modules.py  test_playback.py  transcribe.py  transcription.py  tsconfig.node.json  vitest.config.ts
.husky/: pre-commit  pre-push
app/: package-lock.json  package.json
e2e/: dm-input.spec.ts  recommendation.spec.ts  seek.spec.ts
electron/: analyze-worker.ts  analyzer.ts  asr-crash.test.ts  asr-integration.test.ts  asr-worker.ts  asr.ts  database.ts  discord-audio.ts  discord-mixer.ts  discord.test.ts  discord.ts  main.ts  metadata-cache.ts  model-paths.ts  music-protocol.test.ts  music-protocol.ts  prefilter.test.ts  prefilter.ts  preload.ts  qwen-child.ts  qwen-integration.test.ts  qwen-worker.ts  qwen.test.ts  qwen.ts  recorder.ts  reprocess-worker.ts  reranker-integration.test.ts  scanner.ts  sessions.test.ts  sessions.ts  store.ts  stt-models.test.ts  voxmlx-bridge.py  voxmlx-child.ts  voxtral-child.test.ts  voxtral-child.ts  voxtral-integration.test.ts  voxtral-latency.test.ts  (+6 more)
server/: bot.py  (+1 more)
(+68 files in other folders)
