[project]
name = "doty"
version = "0.1.0"
description = "Continuous Speech-to-Text Recorder with Parakeet-MLX"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "parakeet-mlx>=0.4.0",
    "mlx>=0.30.0",
    "soundfile>=0.13.0",
    "loguru>=0.7.0",
    "pyaudio>=0.2.14",
    "numpy>=1.20.0",
]
